# Sentigrade

./: README.md
SentimentSentinel/SentimentSentinel/: app.py  pyproject.toml
SentimentSentinel/SentimentSentinel/attached_assets/: Pasted-import-ipywidgets-as-widgets-from-IPython-display-import-display-from-googleapiclient-discovery-im-1743310921731.txt
SentimentSentinel/SentimentSentinel/data/: sea_countries.py
SentimentSentinel/SentimentSentinel/pages/: news_analysis.py  social_media_analysis.py  trend_analysis.py
SentimentSentinel/SentimentSentinel/utils/: data_processor.py  language_detector.py  news_api.py  sentiment_analyzer.py  visualization.py
